# onboaring-app

./: .gitignore  app.py  gui.py  prompts.py  pyproject.toml
.github/workflows/: build-deploy-v1.yml  genai-deploy.yml  main_web-app-onboarding-v2.yml  main_webapp-onboarding.yml  main_webapp-python-v1.yml  optimize-v2.yml  other-optimize-v1.yml  temp.yml
data/: employees.py
