[project]
name = "onboardingassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu==1.9.0.post1",
    "faker==30.0.0",
    "langchain==0.3.1",
    "langchain-community==0.3.1",
    "langchain-groq==0.2.0",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.2.1",
    "pypdf==5.4.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.3.1",
    "streamlit==1.38.0",
]
